--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <nav>
     <div class="baris">
-      <img class="logo" src="images/logo/logo_kuy.png">
+      <img class="logo" src="images/logo/logo_kuy1.png">
       <div class="navigasi">
         <a href="#best-seller">Best Seller</a>
         <a href="#our-team">Our Team</a>
