--- a/produk.html
+++ b/produk.html
@@ -41,7 +41,7 @@
   <nav class="navbar navbar-expand-lg bg-success navbar-dark w-100 fixed-top">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
-        <img class="logo" src="images/logo/logo_kuy.png" height="40">
+        <img class="logo" src="images/logo/logo_kuy1.png" height="40">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
