--- a/produk.html
+++ b/produk.html
@@ -136,7 +136,7 @@
           </ul>
         </div>
         <div class="col-md-4 text-light text-end">
-          Copyright Kopi Kuy 2023
+          Copyright Kopi Kuy Taba 2023
         </div>
       </div>
     </div>
