--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
       </div>
       <p class="testimoni">"Tempat nya nyaman sekali pasti kalo kalian dateng betah ... selain tempat yang
         nyaman lalu pelayanan nya good banget... dan kalian yang datang ke kopi kuy jangan
-        lewatkan permainan yang disediakan oleh kopi kuy , banyak banget game nya!"</p>
+        lewatkan permainan yang disediakan oleh kopi kuy Taba, banyak banget game nya!"</p>
     </div>
   </div>
 kak jazuli, bagian line 174 bisa diganti menjadi </section> 
@@ -205,6 +205,6 @@ lalu dibawah line 174 bisa dihapus dahulu sampe tag footer, lalu copas kode beri
                 <a href="#contact-us">Contact Us</a>
                 <a href="produk.html">Shop</a>
             </div>
-            <p class="copyright">Â© 2023 Kopi Kuy. All Rights Reserved</p>
+            <p class="copyright">Â© 2023 Kopi Kuy Taba. All Rights Reserved</p>
         </div>
     </footer>
