--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
       <div class="col-kiri">
         <h1 class="judul-header">
-          Kopi Kuy <img src="images/icon/icon_kopi.svg" alt="">
+          Kopi Kuy Taba <img src="images/icon/icon_kopi.svg" alt="">
         </h1>
         <p class="subjudul-header">
           Kopi Kuy merupakan sebuah startup kopi retail yang ingin menyajikan
@@ -89,7 +89,7 @@
         Gak Ngopi Gak Kuy!
       </h2>
       <p class="tentang-about-us">
-        Didirikan pada 2017, Kopi Kuy merupakan sebuah startup kopi retail
+        Didirikan pada 2017, Kopi Kuy Taba merupakan sebuah startup kopi retail
         yang ingin menyajikan kopi dengan kualitas tinggi untuk para pelanggannya.
         Nama Kuy yang diambil dari "yuk" yang merupakan harapan kami untuk mengajak semua
         yang terlibat dalam bisnis kami untuk bersama-sama menikmati sajian kopi yang berkualitas.
@@ -109,7 +109,7 @@
       <div class="col-team">
         <img src="images/team/team1.jpg">
         <h3>Riki Steven</h3>
-        <p>Founder Kopi Kuy</p>
+        <p>Founder Kopi Kuy Taba </p>
       </div>
       <div class="col-team">
         <img src="images/team/team2.jpg">
@@ -167,7 +167,7 @@
         </div>
       </div>
       <p class="testimoni">"Tempat nya nyaman sekali pasti kalo kalian dateng betah ... selain tempat yang
-        nyaman lalu pelayanan nya good banget... dan kalian yang datang ke kopi kuy jangan
+        nyaman lalu pelayanan nya good banget... dan kalian yang datang ke kopi kuy Taba jangan
         lewatkan permainan yang disediakan oleh kopi kuy Taba, banyak banget game nya!"</p>
     </div>
   </div>
